--- a/tarea3DWESandreafueyo/src/main/resources/templates/registrarpersona.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/registrarpersona.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="es">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Usuario</title>
+    <title>Registrar usuario</title>
     <link rel="stylesheet" th:href="@{/registrarpersona.css}">
 </head>
 <body>
     <header>
-        <div class="logo"><img th:src="@{/imagenes/logo.png}" alt="Logo"></div>
-    </header>
-    
+        <div class="logo">
+            <img th:src="@{/imagenes/logo.png}" alt="Logo">
+        </div>
+    </header> 
     <main>
         <h2>MENÚ DEL ADMINISTRADOR</h2>
         <h3>REGISTRO DE NUEVO USUARIO</h3>
-
+        
         <div class="form-container">
-            <form th:action="@{/registrarpersona}" method="post">
+            <form th:action="@{/registrarpersona}" th:object="${credenciales}" method="post">
                 <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" th:field="*{nombre}" required>
+                <input type="text" id="nombre" name="nombre" th:field="*{persona.nombre}" required>
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" th:field="*{email}" required>
+                <input type="email" id="email" name="email" th:field="*{persona.email}" required>
 
                 <label for="usuario">Usuario:</label>
                 <input type="text" id="usuario" name="usuario" th:field="*{usuario}" required>
 
                 <label for="contrasena">Contraseña:</label>
-                <input type="password" id="contrasena" name="contrasena" th:field="*{contrasena}" required>
+                <input type="password" id="contrasena" name="contrasena" th:field="*{password}" required>
 
                 <button type="submit">Enviar <span>&raquo;</span></button>
-            
-				<div th:if="${mensaje}" class="mensaje-exito" th:text="${mensaje}"></div>
-				<div th:if="${error}" class="mensaje-error" th:text="${error}"></div>
-
             </form>
+            <p th:if="${error}" th:text="${error}" style="color: red;"></p>
         </div>
     </main>
 </body>
