Commit con cambios en varios templates y creación página registrar ejemplar

--- a/tarea3DWESandreafueyo/src/main/resources/templates/menupersonal.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/menupersonal.html
@@ -13,7 +13,7 @@
         </div>
     </header>
     <h2>MENÚ PERSONAL</h2>
-    <div class="menu">
+    <div class="menupersonal">
          <a th:href="@{/verplantas}" class="menu-item">
             <img th:src="@{/imagenes/planta.png}" alt="VER PLANTAS">
             <span>1. VER PLANTAS</span>
