--- a/tarea3DWESandreafueyo/src/main/resources/static/menuadmin.css
+++ b/tarea3DWESandreafueyo/src/main/resources/static/menuadmin.css
@@ -20,9 +20,8 @@ header {
 }
 
 .logo img {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 65px;
+    height: 65px;
 }
 
 h1 {
@@ -92,6 +91,13 @@ button:hover {
     margin-top: 80px; 
 }
 
+.menupersonal {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin-top: 80px; 
+}
+
 .menu-item {
     background-color: #fff;
     border-radius: 15px;
@@ -100,6 +106,8 @@ button:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
     cursor: pointer;
+    text-decoration: none;
+    display: block;
 }
 
 .menu-item:hover {
@@ -118,4 +126,5 @@ button:hover {
     display: block;
     font-size: 18px;
     color: #333;
+    text-decoration: none;
 }
