--- a/tarea3DWESandreafueyo/src/main/resources/static/registrarpersona.css
+++ b/tarea3DWESandreafueyo/src/main/resources/static/registrarpersona.css
@@ -28,7 +28,7 @@ header {
 /* Estilo para h2 y h3 como en el menú del administrador */
 h2, h3 {
     text-align: center;
-    margin-top: 100px; /* Ajusta este valor según sea necesario */
+    margin-top: 100px; 
     color: white;
     display: flex;
     justify-content: center;
@@ -40,7 +40,7 @@ h2, h3 {
 }
 
 h3 {
-    margin-top: 10px; /* Espacio entre h2 y h3 */
+    margin-top: 10px; 
 }
 
 /* Contenedor del formulario centrado */
