--- a/tarea3DWESandreafueyo/src/main/resources/templates/index.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img th:src="@{/imagenes/logo.png}" alt="Logo">
+            <img th:src="@{/imagenes/logo2.png}" alt="Logo">
         </div>
     </header>
     <h1>VIVERO LA LABORAL</h1>
