--- a/tarea3DWESandreafueyo/src/main/resources/templates/iniciarsesion.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/iniciarsesion.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img src="../imagenes/logo.png"></div>
+        <div class="logo"><img src="../imagenes/logo2.png"></div>
     </header>
     <div class="login-container">
         <h2 class="iniciarsesion">INICIAR SESIÓN</h2>
