--- a/tarea3DWESandreafueyo/src/main/resources/templates/gestionejemplares.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/gestionejemplares.html
@@ -22,7 +22,7 @@
             <img th:src="@{/imagenes/filtrar.png}" alt="FILTRAR EJEMPLARES">
             <span>2. Filtrar ejemplares por tipo de planta.</span>
         </a>
-        <a th:href="@{/modificarplanta}" class="menu-item">
+        <a th:href="@{/vermensajesejemplar}" class="menu-item">
             <img th:src="@{/imagenes/mensajes.png}" alt="MENSAJES EJEMPLARES">
             <span>3. Ver mensajes de seguimiento de un ejemplar.</span>
         </a>
