--- a/tarea3DWESandreafueyo/src/main/resources/templates/vermensajesejemplar.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/vermensajesejemplar.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vivero La Laboral - Registrar ejemplar</title>
+    <title>Vivero La Laboral</title>
     <link rel="stylesheet" th:href="@{/registrarejemplar.css}">
 </head>
 <body>
     <header>
-        <div class="logo"><img th:src="@/imagenes/logo.png" alt="Logo"></div>
+        <div class="logo"><img src="../imagenes/logo.png" alt="Logo"></div>
     </header>
     <main>
     <br><br>
-        <h2>PLANTAS DEL VIVERO</h2>
+        <h2>EJEMPLARES DEL VIVERO</h2>
 
         <div th:if="${error}" style="color: red; font-weight: bold;">
             <p th:text="${error}"></p>
@@ -25,33 +25,29 @@
             <thead>
                 <tr>
                     <th>Seleccionar</th>
-                    <th>CÓDIGO DE PLANTA</th>
-                    <th>NOMBRE COMÚN</th>
-                    <th>NOMBRE CIENTÍFICO</th>
+                    <th>ID</th>
+                    <th>NOMBRE</th>
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="planta : ${plantas}">
+                <tr th:each="ejemplar : ${ejemplares}">
+                    <td th:text="${ejemplar.id}"></td>
+                    <td th:text="${ejemplar.nombre}"></td>
                     <td>
-                        <input type="radio" name="seleccionPlanta" th:value="${planta.codigo}" onchange="activarFormulario(this)">
-                    </td>
-                    <td th:text="${planta.codigo}"></td>
-                    <td th:text="${planta.nombrecomun}"></td>
-                    <td th:text="${planta.nombrecientifico}"></td>
-                    <td class="btnseleccion">
-					<button id="button-selec" th:data-codigo="${planta.codigo}" onclick="mostrarFormulario(this.getAttribute('data-codigo'))">Seleccionar</button>
+
+					<button id="button-selec" th:data-codigo="${planta.codigo}" th:onclick="mostrarFormulario(this.getAttribute('data-codigo'))">Seleccionar</button>
+
                     </td>
                 </tr>
             </tbody>
         </table>
 
          <form th:action="@{/registrarejemplar}" method="post" id="formularioRegistro" style="display: none;">
-            <h2>REGISTRAR EJEMPLAR</h2>
+            <h3>Registrar Ejemplar</h3>
             <input type="hidden" id="codPlanta" name="codPlanta" value="codPlanta" />
-            <fieldset>
-            <legend>Mensaje:</legend>
-                <textarea id="mensaje" name="mensaje" cols="60" rows="10" placeholder="Introduzca un mensaje para el ejemplar." required></textarea>
-        </fieldset>
+
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
              <div th:if="${mensajeExito}" class="mensajeExito" th:text="${mensajeExito}"></div>
             <button type="submit" id="botonRegistrar" disabled>Registrar Ejemplar</button>
         </form>
