--- a/tarea3DWESandreafueyo/src/main/resources/templates/gestionejemplares.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/gestionejemplares.html
@@ -13,7 +13,7 @@
         </div>
     </header>
     <h2>GESTIÓN DE EJEMPLARES</h2>
-    <div class="menu">
+    <div class="menupersonal">
          <a th:href="@{/registrarejemplar}" class="menu-item">
             <img th:src="@{/imagenes/registrar.png}" alt="REGISTRAR EJEMPLAR">
             <span>1. Registrar un nuevo ejemplar.</span>
