--- a/tarea3DWESandreafueyo/src/main/resources/templates/gestionmensajes.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/gestionmensajes.html
@@ -13,12 +13,12 @@
         </div>
     </header>
     <h2>GESTIÓN DE MENSAJES</h2>
-    <div class="menu">
+    <div class="menupersonal">
          <a th:href="@{/registrarmensaje}" class="menu-item">
             <img th:src="@{/imagenes/registrar.png}" alt="REGISTRAR MENSAJE">
             <span>1. Registrar un nuevo mensaje.</span>
         </a>
-        <a th:href="@{/modificarplanta}" class="menu-item">
+        <a th:href="@{/filtrarmensaje}" class="menu-item">
             <img th:src="@{/imagenes/modificar.png}" alt="FILTRAR MENSAJES">
             <span>2. Filtrar mensajes.</span>
         </a>
