--- a/tarea3DWESandreafueyo/src/main/resources/static/registrarpersona.css
+++ b/tarea3DWESandreafueyo/src/main/resources/static/registrarpersona.css
@@ -25,7 +25,6 @@ header {
     height: 50px;
 }
 
-/* Estilo para h2 y h3 como en el menú del administrador */
 h2, h3 {
     text-align: center;
     margin-top: 100px; 
@@ -43,7 +42,6 @@ h3 {
     margin-top: 10px; 
 }
 
-/* Contenedor del formulario centrado */
 .form-container {
     max-width: 400px; 
     width: 100%;
@@ -96,4 +94,10 @@ button {
 
 button span {
     margin-left: 5px;
+}
+
+.contenedorboton {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
 }
