--- a/tarea3DWESandreafueyo/src/main/resources/templates/gestionplantas.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/gestionplantas.html
@@ -13,7 +13,7 @@
         </div>
     </header>
     <h2>GESTIÓN DE PLANTAS</h2>
-    <div class="menu">
+    <div class="menupersonal">
          <a th:href="@{/registrarplanta}" class="menu-item">
             <img th:src="@{/imagenes/registrar.png}" alt="REGISTRAR PLANTA">
             <span>1. Registrar una nueva planta.</span>
