--- a/tarea3DWESandreafueyo/src/main/resources/templates/registrarejemplar.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/registrarejemplar.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img th:src="@/imagenes/logo.png" alt="Logo"></div>
+        <div class="logo">
+        	<img th:src="@{/imagenes/logo2.png}" alt="Logo">
+        </div>
     </header>
     <main>
     <br><br>
