--- a/tarea3DWESandreafueyo/src/main/resources/templates/verplantas.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/verplantas.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img src="../imagenes/logo.png"></div>
+        <div class="logo"><img th:src="@{/imagenes/logo.png}"></div>
     </header>
-    <main>
-    <h1></h1>
-    <br>
+        <br>
         <h2>PLANTAS DEL VIVERO</h2>
+    <main>
         <table>
             <thead>
                 <tr>
@@ -30,7 +29,9 @@
                 </tr>
             </tbody>
         </table>
+        <div class="contenedorboton">
         <button onclick="window.history.back()">Volver</button>
+        </div>
     </main>
 </body>
 </html>
