--- a/tarea3DWESandreafueyo/src/main/resources/templates/gestionejemplares.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/gestionejemplares.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img th:src="@{/imagenes/logo.png}" alt="Logo del Vivero">
+            <img th:src="@{/imagenes/lalaboral.png}" alt="Logo del Vivero">
         </div>
     </header>
     <h2>GESTIÓN DE EJEMPLARES</h2>
