--- a/tarea3DWESandreafueyo/src/main/resources/templates/gestionmensajes.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/gestionmensajes.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img th:src="@{/imagenes/logo.png}" alt="Logo del Vivero">
+            <img th:src="@{/imagenes/lalaboral.png}" alt="Logo del Vivero">
         </div>
     </header>
     <h2>GESTIÓN DE MENSAJES</h2>
@@ -18,7 +18,7 @@
             <img th:src="@{/imagenes/registrar.png}" alt="REGISTRAR MENSAJE">
             <span>1. Registrar un nuevo mensaje.</span>
         </a>
-        <a th:href="@{/filtrarmensaje}" class="menu-item">
+        <a th:href="@{/filtrarmensajes}" class="menu-item">
             <img th:src="@{/imagenes/modificar.png}" alt="FILTRAR MENSAJES">
             <span>2. Filtrar mensajes.</span>
         </a>
