--- a/tarea3DWESandreafueyo/src/main/resources/templates/index.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/index.html
@@ -6,12 +6,12 @@
     <title>Vivero La Laboral</title>
     <link rel="stylesheet" th:href="@{/index.css}">
 </head>
-<body>
     <header>
         <div class="logo">
-            <img th:src="@{/imagenes/logo2.png}" alt="Logo">
+            <img th:src="@{/imagenes/logocasa.png}" alt="Logo">
         </div>
     </header>
+<body>
     <h1>VIVERO LA LABORAL</h1>
     <div class="menu">
 	    <a th:href="@{/verplantas}" class="menu-item">
