--- a/tarea3DWESandreafueyo/src/main/resources/templates/menupersonal.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/menupersonal.html
@@ -6,12 +6,12 @@
     <title>Vivero La Laboral - Menú PERSONAL</title>
     <link rel="stylesheet" th:href="@{/menuadmin.css}">
 </head>
-<body>
     <header>
         <div class="logo">
-            <img th:src="@{/imagenes/logo.png}" alt="Logo del Vivero">
+            <img th:src="@{/imagenes/lalaboral.png}" alt="Logo del Vivero">
         </div>
     </header>
+<body>
     <h2>MENÚ PERSONAL</h2>
     <div class="menupersonal">
          <a th:href="@{/verplantas}" class="menu-item">
