--- a/tarea3DWESandreafueyo/src/main/resources/templates/registrarplanta.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/registrarplanta.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img th:src="@{/imagenes/logo.png}" alt="Logo">
+            <img th:src="@{/imagenes/lalaboral.png}" alt="Logo">
         </div>
     </header> 
     <main>
@@ -36,8 +36,8 @@
 		        <button onclick="window.history.back()">Volver</button>
 		        </div>
             </form>
-            <!-- Mensaje de error general -->
             <p th:if="${error}" th:text="${error}" style="color: red;"></p>
+            <p th:if="${exito}" th:text="${exito}" style="color: green;"></p>
         </div>
     </main>
 </body>
