--- a/tarea3DWESandreafueyo/src/main/resources/static/iniciarsesion.css
+++ b/tarea3DWESandreafueyo/src/main/resources/static/iniciarsesion.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap');
+
 header {
     display: flex;
     justify-content: space-between; 
@@ -13,9 +15,8 @@ header {
 }
 
 .logo img {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px; 
+    width: 110px;
+    height: 65px; 
 }
 
 h1 {
@@ -27,7 +28,11 @@ h1 {
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
+    background-image: url('/imagenes/girasoles.png');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,10 +51,14 @@ body {
     margin: 0 auto; 
 }
 
-h2 .iniciarsesion{
-    font-size: 18px;
+h2 {
+    font-size: 20px;
     color: #333;
     margin-bottom: 15px;
+    font-family: "Rammetto One", serif;
+	font-weight: 400;
+	font-style: normal;
+	text-align: center;
 }
 
 label {
@@ -58,6 +67,7 @@ label {
     color: #333;
     display: block;
     margin-top: 10px;
+    text-align: left;
 }
 
 input {
@@ -85,4 +95,30 @@ button {
 
 button span {
     margin-left: 5px;
+}
+
+.form-container {
+    max-width: 400px; 
+    width: 100%;
+    background: white;
+    padding: 20px;
+    margin: 20px auto;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contenedorboton {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
 }
