--- a/tarea3DWESandreafueyo/src/main/resources/static/menuadmin.css
+++ b/tarea3DWESandreafueyo/src/main/resources/static/menuadmin.css
@@ -2,26 +2,26 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-color:#dedede;
 }
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
     align-items: center;
     background-color: #72845d;
-    padding: 5px 20px;
-    position: fixed;
-    top: 0;
+    padding: 5px 20px; 
+    position: fixed; 
+    top: 0; 
     left: 0;
     width: 100%;
-    z-index: 1000;
-    height: 60px;
+    z-index: 1000; 
+    height: 60px; 
 }
 
 .logo img {
-    width: 65px;
-    height: 65px;
+    width: 110px;
+    height: 65px; 
 }
 
 h1 {
@@ -89,6 +89,8 @@ button:hover {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-top: 80px; 
+    margin: 80px auto 0 auto;
+    width: 80%;
 }
 
 .menupersonal {
@@ -100,7 +102,7 @@ button:hover {
 
 .menu-item {
     background-color: #fff;
-    border-radius: 15px;
+    border-radius: 25px;
     padding: 20px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
