--- a/tarea3DWESandreafueyo/src/main/resources/static/registrarejemplar.css
+++ b/tarea3DWESandreafueyo/src/main/resources/static/registrarejemplar.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-color: #dedede;
 }
 
 header {
@@ -20,7 +20,7 @@ header {
 }
 
 .logo img {
-    width: 65px;
+    width: 110px;
     height: 65px; 
 }
 
@@ -39,18 +39,20 @@ main {
 }
 
 table {
-    width: 100%;
+    width: 70%;
+    margin:20px auto;
     border-collapse: collapse;
     margin-top: 20px;
 }
 
 table, th, td {
-    border: 1px solid #ddd;
+    border: 1px solid black;
+    text-align: center;
+    vertical-align: middle;
 }
 
 th, td {
     padding: 10px;
-    text-align: left;
 }
 
 th {
@@ -64,9 +66,8 @@ th.seleccion {
     border:none;
 }
 
-td.btnseleccion {
-    background-color: #d9d9d9;
-    border: none;
+td {
+    background-color:white;
 }
 
 button {
@@ -82,16 +83,38 @@ button:hover {
     background-color: #72845d;
 }
 
-h2 {
+h2, h3 {
     text-align: center;
     margin-top: 50px;
     color: #333;
-    display: flex;
+    display: block;
     background-color: #72845d;
-    padding: 10px 20px;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+h2 {
+    margin-top: 50px;
+}
+
+h3 {
+    margin-top: 0px;
 }
 
 fieldset{
     color: black;
     font-family: 'Ubuntu Mono', monospace;
+}
+
+.contenedorboton {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+}
+
+legend {
+    font-weight: bold;
+    font-size: 18px;
+    color: #333;
 }
