--- a/tarea3DWESandreafueyo/src/main/resources/static/verplantas.css
+++ b/tarea3DWESandreafueyo/src/main/resources/static/verplantas.css
@@ -3,7 +3,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #ffffff;
+    background-color: #dedede;
     display: flex;
     flex-direction: column;
 }
@@ -23,24 +23,23 @@ header {
 }
 
 .logo img {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px; 
+    width: 110px;
+    height: 65px; 
 }
 
 main {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    padding: 20px;
+    padding: 30px;
 }
 
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
+    margin-top: 1px;
 }
 
 table, th, td {
@@ -58,7 +57,7 @@ th {
 }
 
 td {
-    background-color: #d9d9d9;
+    background-color:#a9a9a9;
 }
 
 button {
