--- a/tarea3DWESandreafueyo/src/main/resources/templates/iniciarsesion.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/iniciarsesion.html
@@ -6,12 +6,12 @@
     <title>Iniciar Sesión</title>
     <link rel="stylesheet" th:href="@{/iniciarsesion.css}">
 </head>
-<body>
     <header>
-        <div class="logo"><img src="../imagenes/logo2.png"></div>
+        <div class="logo"><img th:src="@{/imagenes/lalaboral.png}"></div>
     </header>
+<body>
     <div class="login-container">
-        <h2 class="iniciarsesion">INICIAR SESIÓN</h2>
+        <h2>INICIAR SESIÓN</h2>
         <form th:action="@{/login}" method="post">
             <label for="usuario">USUARIO:</label>
             <input type="text" id="usuario" name="usuario" required>
@@ -21,6 +21,10 @@
 
             <button type="submit">enviar <span>&raquo;</span></button>
         </form>
+        <div class="contenedorboton">
+       		<button onclick="window.history.back()">Volver</button>
+        </div>
     </div>
 </body>
+
 </html>
