--- a/tarea3DWESandreafueyo/src/main/resources/templates/registrarejemplar.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/registrarejemplar.html
@@ -6,62 +6,61 @@
     <title>Vivero La Laboral - Registrar ejemplar</title>
     <link rel="stylesheet" th:href="@{/registrarejemplar.css}">
 </head>
-<body>
     <header>
         <div class="logo">
-        	<img th:src="@{/imagenes/logo2.png}" alt="Logo">
+        	<img th:src="@{/imagenes/lalaboral.png}" alt="Logo">
         </div>
     </header>
-    <main>
+<body>
     <br><br>
-        <h2>PLANTAS DEL VIVERO</h2>
-
+    <h2>REGISTRAR NUEVO EJEMPLAR</h2>
+    <main>
         <div th:if="${error}" style="color: red; font-weight: bold;">
             <p th:text="${error}"></p>
         </div>
         <div th:if="${mensajeExito}" style="color: green; font-weight: bold;">
             <p th:text="${mensajeExito}"></p>
         </div>
-        
+        <div th:if="${plantas}">
+        <h3>PLANTAS DEL VIVERO</h3>
         <table>
             <thead>
                 <tr>
-                    <th>Seleccionar</th>
                     <th>CÓDIGO DE PLANTA</th>
                     <th>NOMBRE COMÚN</th>
                     <th>NOMBRE CIENTÍFICO</th>
+                    <th>Seleccionar</th>
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="planta : ${plantas}">
-                    <td>
-                        <input type="radio" name="seleccionPlanta" th:value="${planta.codigo}" onchange="activarFormulario(this)">
-                    </td>
                     <td th:text="${planta.codigo}"></td>
                     <td th:text="${planta.nombrecomun}"></td>
                     <td th:text="${planta.nombrecientifico}"></td>
-                    <td class="btnseleccion">
-					<button id="button-selec" th:data-codigo="${planta.codigo}" onclick="mostrarFormulario(this.getAttribute('data-codigo'))">Seleccionar</button>
+                    <td class="sinborde">
+					<button id="button-selec" th:data-codigo="${planta.codigo}" onclick="mostrarFormulario(this.getAttribute('data-codigo'))">✔</button>
                     </td>
                 </tr>
             </tbody>
         </table>
+        </div>
 
          <form th:action="@{/registrarejemplar}" method="post" id="formularioRegistro" style="display: none;">
-            <h2>REGISTRAR EJEMPLAR</h2>
+           
             <input type="hidden" id="codPlanta" name="codPlanta" value="codPlanta" />
             <fieldset>
             <legend>Mensaje:</legend>
                 <textarea id="mensaje" name="mensaje" cols="60" rows="10" placeholder="Introduzca un mensaje para el ejemplar." required></textarea>
-        </fieldset>
-             <div th:if="${mensajeExito}" class="mensajeExito" th:text="${mensajeExito}"></div>
+        	<br>
+            <div th:if="${mensajeExito}" class="mensajeExito" th:text="${mensajeExito}"></div>
             <button type="submit" id="botonRegistrar" disabled>Registrar Ejemplar</button>
+        </fieldset>
         </form>
 
-            <button onclick="window.history.back()">Volver</button>
-
         <br>
-        <button onclick="window.history.back()">Volver al Menú</button>
+        <div class="contenedorboton">
+        <button onclick="window.history.back()">Volver al menú</button>
+        </div>
     </main>
 
     <script>
