--- a/tarea3DWESandreafueyo/src/main/resources/templates/registrarpersona.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/registrarpersona.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img th:src="@{/imagenes/logo.png}" alt="Logo">
+            <img th:src="@{/imagenes/lalaboral.png}" alt="Logo">
         </div>
     </header> 
     <main>
@@ -17,6 +17,7 @@
         <h3>REGISTRO DE NUEVO USUARIO</h3>
         
         <div class="form-container">
+        <p>Introduzca los datos del nuevo usuario.</p>
             <form th:action="@{/registrarpersona}" th:object="${credenciales}" method="post">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" th:field="*{persona.nombre}" required>
@@ -32,9 +33,11 @@
 
                 <button type="submit">Enviar <span>&raquo;</span></button>
                 <br>
-                <div class="contenedorboton">
-		        <button onclick="window.history.back()">Volver</button>
-		        </div>
+				<div class="contenedorboton">
+				    <a th:href="@{/menuadmin}">
+				        <button type="button">Volver</button>
+				    </a>
+				</div>
             </form>
             <p th:if="${error}" th:text="${error}" style="color: red;"></p>
             <p th:if="${exito}" th:text="${exito}" style="color: green;"></p>
