--- a/tarea3DWESandreafueyo/src/main/resources/templates/verplantas.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/verplantas.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img th:src="@{/imagenes/logo.png}"></div>
+        <div class="logo"><img th:src="@{/imagenes/lalaboral.png}"></div>
     </header>
-        <br>
         <h2>PLANTAS DEL VIVERO</h2>
     <main>
         <table>
@@ -29,6 +28,7 @@
                 </tr>
             </tbody>
         </table>
+        <br><br>
         <div class="contenedorboton">
         <button onclick="window.history.back()">Volver</button>
         </div>
