--- a/tarea3DWESandreafueyo/src/main/resources/templates/menuadmin.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/menuadmin.html
@@ -26,11 +26,11 @@
             <img th:src="@{/imagenes/plantas.png}" alt="GESTIÓN DE PLANTAS">
             <span>3. GESTIÓN DE PLANTAS</span>
         </a>
-        <a th:href="@{/gestionejemplares?origen=menuadmin}" class="menu-item">
+        <a th:href="@{/gestionejemplares}" class="menu-item">
             <img th:src="@{/imagenes/ejemplares.png}" alt="GESTIÓN DE EJEMPLARES">
             <span>4. GESTIÓN DE EJEMPLARES</span>
         </a>
-        <a th:href="@{/gestionmensajes?origen=menuadmin}" class="menu-item">
+        <a th:href="@{/gestionmensajes}" class="menu-item">
             <img th:src="@{/imagenes/mensajes.png}" alt="GESTIÓN DE MENSAJES">
             <span>5. GESTIÓN DE MENSAJES</span>
         </a>
