--- a/tarea3DWESandreafueyo/src/main/resources/templates/menupersonal.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/menupersonal.html
@@ -18,11 +18,11 @@
             <img th:src="@{/imagenes/planta.png}" alt="VER PLANTAS">
             <span>1. VER PLANTAS</span>
         </a>
-        <a th:href="@{/gestionejemplares?origen=menupersonal}" class="menu-item">
+        <a th:href="@{/gestionejemplares}" class="menu-item">
             <img th:src="@{/imagenes/ejemplares.png}" alt="GESTIÓN DE EJEMPLARES">
             <span>2. GESTIÓN DE EJEMPLARES</span>
         </a>
-        <a th:href="@{/gestionmensajes?origen=menupersonal}" class="menu-item">
+        <a th:href="@{/gestionmensajes}" class="menu-item">
             <img th:src="@{/imagenes/mensajes.png}" alt="GESTIÓN DE MENSAJES">
             <span>3. GESTIÓN DE MENSAJES</span>
         </a>
