--- a/tarea3DWESandreafueyo/src/main/resources/templates/vermensajesejemplar.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/vermensajesejemplar.html
@@ -64,6 +64,13 @@
         <div class="contenedorboton">
         <button onclick="window.history.back()">Volver</button>
         </div>
+        
+        <div class="contenedorboton">
+			<a th:href="@{/gestionejemplares}">
+			<button type="button">Volver al menú</button>
+			</a>
+		</div>
+        
 
     </main>
 
