--- a/tarea3DWESandreafueyo/src/main/resources/templates/gestionmensajes.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/gestionmensajes.html
@@ -14,11 +14,11 @@
     </header>
     <h2>GESTIÓN DE MENSAJES</h2>
     <div class="menupersonal">
-         <a th:href="@{/registrarmensaje}" class="menu-item">
+         <a th:href="@{/registrarmensaje" class="menu-item">
             <img th:src="@{/imagenes/registrar.png}" alt="REGISTRAR MENSAJE">
             <span>1. Registrar un nuevo mensaje.</span>
         </a>
-        <a th:href="@{/filtrarmensajes}" class="menu-item">
+        <a th:href="@{/filtrarmensajes" class="menu-item">
             <img th:src="@{/imagenes/modificar.png}" alt="FILTRAR MENSAJES">
             <span>2. Filtrar mensajes.</span>
         </a>
@@ -26,6 +26,7 @@
 		    <img th:src="@{/imagenes/casa.png}" alt="VOLVER">
 		    <span>3. Volver al menú anterior.</span>
 		</a>
+
     </div>
 </body>
 </html>
